<resources>
    <string name="app_name">BearKidDiaryFamily</string>
    <string name="tabView_1">动态</string>
    <string name="tabView_2">孩子</string>
    <string name="tabView_4">相册</string>
    <string name="tabView_5">我</string>

    <!-- 我 -->
    <string name="txt_item_title_mychildren">我的孩子</string>
    <string name="txt_item_scan">扫一扫</string>
    <string name="txt_item_qr">我的二维码</string>
    <string name="txt_item_contacts">联系人</string>
    <string name="txt_item_setting">设置</string>

    <string name="personal_info_title">个人信息</string>
    <string name="personal_info_avatar">头像</string>
    <string name="personal_info_name">姓名</string>
    <string name="personal_info_gender">性别</string>
    <string name="personal_info_phone">电话号码</string>
    <string name="personal_info_address">地址</string>
    <string name="personal_info_email">邮箱</string>
    <string name="personal_info_setting">设置</string>
    <string name="confirm">确认</string>

    <string name="personal_info_edit_name">修改用户名信息</string>
    <string name="personal_info_edit_gender">修改性别信息</string>
    <string name="personal_info_edit_address">修改地址信息"</string>
    <string name="personal_info_edit_email">修改邮箱信息</string>

    <string name="male">男</string>
    <string name="female">女</string>


    <!--  -->
    <string name="txt_title_data_analysis">数据分析</string>
    <string name="txt_tab_timeline">时间轴</string>
    <string name="txt_tab_chart">图表</string>
    <string name="txt_spinner_year">年份</string>

    <!-- 即时通讯界面 -->
    <string name="button_send">发送</string>
    <string name="action_settings">Settings</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指,取消发送</string>
    <string name="picture">相片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="longclick_speak">长按说话</string>
    <string name="voice_short_tips">录音时间太短</string>

    <!-- 孩子信息 -->
    <string name="kid_info">孩子信息</string>
    <string name="qrcode_title">我的二维码</string>
    <string name="add">添加</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="vision">视力</string>
    <string name="exhort">家长叮嘱</string>
    <string name="add_kid_title">添加孩子</string>
    <string name="birthday">生日</string>
    <string name="add_body_data">添加身体数据</string>
    <string name="add_height_data">添加身高数据</string>
    <string name="meters">m</string>
    <string name="add_weight_data">添加体重数据</string>
    <string name="kg">kg</string>
    <string name="add_vision_data">添加视力数据</string>
    <string name="left_vision">左眼</string>
    <string name="right_vision">右眼</string>
    <string name="delete_kid">删除孩子</string>
    <string name="loading">加载中…</string>
</resources>
