<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.activity.AddKidActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:onClick="back"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:src="@drawable/selector_title_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/txt_title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_add_kid_confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_translucent"
            android:clickable="true"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/confirm"
            android:textColor="@color/txt_title"
            android:textSize="16sp" />
    </RelativeLayout>

    <bearkid.com.bearkiddiaryfamily.ui.view.CircleImageview
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:src="@drawable/avatar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/et_kid_name"
            android:layout_toStartOf="@+id/et_kid_name"
            android:text="@string/personal_info_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_kid_name"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:drawable/edit_text"
            android:gravity="center_vertical"
            android:singleLine="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/ll_gender"
            android:layout_toStartOf="@+id/ll_gender"
            android:text="@string/personal_info_gender"
            android:textSize="16sp" />


        <LinearLayout
            android:id="@+id/ll_gender"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <Button
                android:id="@+id/btn_kid_gender_male"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="@color/gender_normal"
                android:text="@string/male"
                android:textColor="@color/text_white" />

            <Button
                android:id="@+id/btn_kid_gender_female"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="@color/gender_normal"
                android:text="@string/female"
                android:textColor="@color/text_white" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/tv_kid_birthday"
            android:layout_toStartOf="@+id/tv_kid_birthday"
            android:text="@string/birthday"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_kid_birthday"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:drawable/edit_text"
            android:clickable="true"
            android:gravity="center_vertical"
            android:singleLine="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/et_kid_ask"
            android:layout_toStartOf="@+id/et_kid_ask"
            android:text="@string/exhort"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_kid_ask"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:drawable/edit_text"
            android:gravity="top"
            android:maxLines="3"
            android:minLines="3" />
    </RelativeLayout>

    <Button
        style="@style/style_text_white"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/selector_btn_dismiss"
        android:text="@string/delete_kid"/>
</LinearLayout>
