<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">
    <FrameLayout
        android:id="@+id/activity_main_contain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </FrameLayout>
    <LinearLayout
        android:id="@+id/activity_main_tab_view"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:baselineAligned="false">
        <RelativeLayout
            android:id="@+id/activity_main_tab1"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/tabView_1"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/activity_main_tab2"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/tabView_2"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/activity_main_tab3"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="+"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/activity_main_tab4"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/tabView_4"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/activity_main_tab5"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/tabView_5"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
