<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/bg_gray_Me_lv"
    tools:context=".ui.activity.PersonalInfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:onClick="back"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:src="@drawable/selector_title_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textColor="@color/txt_title"
            android:text="@string/personal_info_title"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_personal_info_avatar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/selector_translucent_white"
        android:clickable="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/style_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/personal_info_avatar" />

        <ImageView
            android:id="@+id/iv_personal_info_avatar"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/avatar" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray" />

    <LinearLayout
        android:id="@+id/ll_personal_info_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/selector_translucent_white"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_info_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_personal_info_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="张三"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/arrow_right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray" />

    <LinearLayout
        android:id="@+id/ll_personal_info_gender"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/selector_translucent_white"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/style_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_info_gender" />

        <TextView
            android:id="@+id/tv_personal_info_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="女"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/arrow_right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray" />

    <LinearLayout
        android:id="@+id/ll_personal_info_phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/selector_translucent_white"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/style_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_info_phone" />

        <TextView
            android:id="@+id/tv_personal_info_phone"
            style="@style/style_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="15601230123" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray" />

    <LinearLayout
        android:id="@+id/ll_personal_info_address"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/selector_translucent_white"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/style_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_info_address" />

        <TextView
            android:id="@+id/tv_personal_info_address"
            style="@style/style_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="广州" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/arrow_right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray" />

    <LinearLayout
        android:id="@+id/ll_personal_info_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/selector_translucent_white"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/style_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_info_email" />

        <TextView
            android:id="@+id/tv_personal_info_email"
            style="@style/style_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="123456789@163.com" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/arrow_right" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray" />


</LinearLayout>
