<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlayout_me_scan"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/selector_me_item"
        android:clickable="true">

        <ImageView
            android:id="@+id/img_me_scan"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="32dp"
            android:src="@drawable/ic_me_scan" />

        <TextView
            android:id="@+id/txt_me_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/img_me_scan"
            android:text="@string/txt_item_scan"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/bg_gray_Me_lv"></View>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlayout_me_qr"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:clickable="true"
        android:background="@drawable/selector_me_item">

        <ImageView
            android:id="@+id/img_me_qr"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="32dp"
            android:src="@drawable/ic_me_qrcode" />

        <TextView
            android:id="@+id/txt_me_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/img_me_qr"
            android:text="@string/txt_item_qr"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/bg_gray_Me_lv"></View>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlayout_me_contacts"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:clickable="true"
        android:background="@drawable/selector_me_item">

        <ImageView
            android:id="@+id/img_me_contacts"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="32dp"
            android:src="@drawable/ic_me_contacts" />

        <TextView
            android:id="@+id/txt_me_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/img_me_contacts"
            android:text="@string/txt_item_contacts"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/bg_gray_Me_lv"></View>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlayout_me_setting"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:clickable="true"
        android:background="@drawable/selector_me_item">

        <ImageView
            android:id="@+id/img_me_setting"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="32dp"
            android:src="@drawable/ic_me_setting" />

        <TextView
            android:id="@+id/txt_me_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/img_me_setting"
            android:text="@string/txt_item_setting"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/bg_gray_Me_lv"></View>
    </RelativeLayout>


</LinearLayout>